# Students_Performance_Prediction

./: README.md  pyproject.toml
notebook/: ML_project_student_performance.ipynb  ML_project_student_performance.txt
